--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header {
   align-items:center;
   justify-content: center;
 }
-.container-fluid {
+.container {
     padding-top: 20px;
     display: grid;
     max-width: 70%;
@@ -33,7 +33,7 @@ header {
     transition-property: all;
 }
 .content {
-    background-color: rgba(255, 255, 255, .8);
+    /* background-color: rgba(255, 255, 255, .8); */
     max-width: 900px;
     margin: 70px auto;
     padding: 40px;
