--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ header {
 }
 .container {
     padding-top: 20px;
-    display: grid;
+    /* display: grid; */
     max-width: 70%;
     align-content: center;
-    text-align: center;
+    /* text-align: center; */
 }
 .logo1 {
     font-family: 'Tangerine';
