--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ header {
     /* display: grid; */
     max-width: 70%;
     align-content: center;
+    justify-content: center;
     /* text-align: center; */
 }
 .logo1 {
