--- a/dope.css
+++ b/dope.css
@@ -69,6 +69,9 @@ body {
   /* transform-origin: top left; */
 
 }
+.preload {
+  color: transparent !important;
+}
 @keyframes slideInFromLeft {
   0% {
     transform: translateX(-100%);
@@ -81,15 +84,14 @@ body {
   }
 }
 h1 {
+  animation: 1s cubic-bezier(0.535, 0.005, 0.400, 1.610) .5s 1 slideInFromLeft;
   color: black;
   padding: 10px;
   text-align: center;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-weight: 100;
   font-size: 4em;
-  animation: 1.5s ease-in .5s 1 slideInFromLeft;
 }
-
 .h1 {
   text-decoration: none;
 }
